# rust-gpu-cli

./: Cargo.toml  README.md  build.rs  justfile  rust-toolchain.toml
.github/common/: action.yml
.github/workflows/: release.yml
src/: builder.rs  codegen_path.rs  main.rs  rust_toolchain.rs  validate.rs
